Keep compatibility from 1.20 to 26.2, changed java 17 to java 21